@@ -58,6 +58,7 @@ Fixes:
    * Fix wrong parameter for thumbnail error in elm_icon.
    * Fix missing selected event in elm_index (elm_index_item_selected_set)
    * Fix the elm_image which is made up of a edje object can call a callback function
+   * Fix update the min size hint on elm_label after a text set
 
 Removals:
 
