@@ -688,3 +688,7 @@
 
         * Support indicator service in elm_conformant. elm conformant can manage
           indicator(elm_plug).
+
+2012-11-14  Michael Bouchaud (yoz)
+
+        * update the min size hint on elm_label after a text set
